CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)
CMAKE_POLICY(VERSION 2.8)

IF(LUAROCKS_PREFIX)
  MESSAGE(STATUS "Installing Unsup through Luarocks")
  STRING(REGEX REPLACE "(.*)lib/luarocks/rocks.*" "\\1" CMAKE_INSTALL_PREFIX  "${LUAROCKS_PREFIX}")
  MESSAGE(STATUS "Prefix inferred from Luarocks: ${CMAKE_INSTALL_PREFIX}")
ENDIF()

FIND_PACKAGE(CUDA REQUIRED)
LIST(APPEND CUDA_NVCC_FLAGS "-arch=sm_30")

INCLUDE_DIRECTORIES("${Torch_INSTALL_INCLUDE}/THC")
LINK_DIRECTORIES("${Torch_INSTALL_LIB}")

FILE(GLOB luasrc *.lua)
FILE(GLOB src-cuda *.cu)
CUDA_ADD_LIBRARY(unsupgpu MODULE ${src-cuda})
TARGET_LINK_LIBRARIES(unsupgpu luaT THC TH)

IF(LUALIB)
  TARGET_LINK_LIBRARIES(unsupgpu ${LUALIB})
ENDIF()

ADD_TORCH_PACKAGE(unsup "${src}"  "${luasrc}" "Unsupervised Learning")
TARGET_LINK_LIBRARIES(unsup luaT TH)

### Torch packages supposes libraries prefix is "lib"
SET_TARGET_PROPERTIES(unsupgpu PROPERTIES
  PREFIX "lib"
  IMPORT_PREFIX "lib")

INSTALL(TARGETS unsupgpu
  RUNTIME DESTINATION "${Torch_INSTALL_LUA_CPATH_SUBDIR}"
  LIBRARY DESTINATION "${Torch_INSTALL_LUA_CPATH_SUBDIR}")

INSTALL(
  FILES
  ${luasrc}
  DESTINATION "${Torch_INSTALL_LUA_PATH_SUBDIR}/unsupgpu")
